# vd-iot-tfdetectionservice

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  requirement.txt  tox.ini
TFDetection/: .flake8  mkdocs.yml  pyproject.toml
TFDetection/docs/: camerstreaming.md
TFDetection/tfdetection/: .flake8
TFDetection/tfdetection/object_detection/: export_tflite_ssd_graph_lib.py  model_hparams.py  model_main_tf2.py
TFDetection/tfdetection/object_detection/anchor_generators/: flexible_grid_anchor_generator.py
TFDetection/tfdetection/object_detection/box_coders/: faster_rcnn_box_coder_test.py
TFDetection/tfdetection/object_detection/builders/: anchor_generator_builder.py  box_coder_builder_test.py  calibration_builder.py  decoder_builder.py  hyperparams_builder_test.py  input_reader_builder.py  losses_builder_test.py  optimizer_builder.py
TFDetection/tfdetection/object_detection/core/: box_list_test.py  class_agnostic_nms_test.py  densepose_ops.py  matcher_test.py  minibatch_sampler_test.py  prefetcher.py  prefetcher_tf1_test.py  region_similarity_calculator_test.py  target_assigner.py
TFDetection/tfdetection/object_detection/data_decoders/: tf_sequence_example_decoder.py
TFDetection/tfdetection/object_detection/dataset_tools/: create_ava_actions_tf_record.py  tf_record_creation_util.py  tf_record_creation_util_test.py
TFDetection/tfdetection/object_detection/matchers/: argmax_matcher.py  hungarian_matcher_tf2_test.py
TFDetection/tfdetection/object_detection/metrics/: calibration_evaluation_tf1_test.py
TFDetection/tfdetection/object_detection/models/: center_net_mobilenet_v2_feature_extractor_tf2_test.py  faster_rcnn_inception_resnet_v2_feature_extractor.py  faster_rcnn_inception_resnet_v2_keras_feature_extractor.py  faster_rcnn_nas_feature_extractor.py  faster_rcnn_pnas_feature_extractor_tf1_test.py  feature_map_generators.py  ssd_inception_v2_feature_extractor_tf1_test.py  ssd_mobilenet_edgetpu_feature_extractor.py  ssd_mobilenet_v1_feature_extractor_tf2_test.py  ssd_mobilenet_v2_fpn_feature_extractor.py  ssd_mobilenet_v2_keras_feature_extractor.py  ssd_mobilenet_v3_feature_extractor_tf1_test.py
TFDetection/tfdetection/object_detection/predictors/: mask_rcnn_box_predictor.py  rfcn_keras_box_predictor_tf2_test.py
app/: app.py  test.py
docs/: index.md
tensorflow/: app.py
(+394 files in other folders)
