[tool.poetry]
name = "tfdetection"
version = "0.0.1"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["Aditya Kumar Singh <aditya.singh@tataiq.com>"]
repository = "https://tatacommiot@dev.azure.com/tatacommiot/Video%20Based%20IoT/_git/vd-iot-streaming"
documentation = "https://tatacommiot@dev.azure.com/tatacommiot/Video%20Based%20IoT/_git/vd-iot-streaming"
readme = "README.md"
packages = [
  {include = "tfdetection"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
redis = "^4.6.0"
opencv-python = "^4.8.0.74"
kafka-python = "^2.0.2"
mkdocs = "^1.4.3"
mkdocstrings-python = "^1.2.0"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
black = "^23.7.0"
autopep8 = "^2.0.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["tfdetection"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.flake8]
target-version = "py37"
ignore = ['E501', 'E241', 'E501']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true



[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]



